--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,1 +1,16 @@
-<p>This is the partial for view 1.</p>
+<link rel="stylesheet" href="view1/view1.css">
+<div class="view1" ng-controller="View1Ctrl as v1controller">
+    <div class="largeImageContainer">
+        <div class="imageWrapper">
+            <img class="large" ng-src="{{v1controller.server + v1controller.image}}" ng-click="v1controller.showFullRes()">
+            <span class="hoverText">Click to Zoom</span>
+        </div>
+        <h3>{{v1controller.imageProperties.title}}</h3>
+        <h6>{{v1controller.imageProperties.caption}}</h6>
+    </div>
+    <span class="fullResImageContainer" ng-hide="!v1controller.fullResVisible">
+        <div class="imageWrapper">
+            <img ng-src="{{v1controller.server + v1controller.image}}" ng-click="v1controller.hideFullRes()">
+        </div>
+    </span>
+</div>
