--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -1,10 +1,10 @@
-<div ng-controller="View2Ctrl as v2controller">
+<!-- <div ng-controller="View2Ctrl as v2controller"> -->
     <form name="uploadPictureForm">
         <fieldset>
             <legend>Upload your own picture</legend>
             <div>
                 <label>Choose a picture: </label>
-                <input type="file" ng-file-select="" ng-model="uploadedPictures" name="uploadedPictures" accept="image/*" ng-file-change="generateThumb(uploadedPictures[0], $files)" required="false">
+                <input type="file" ng-file-select="" ng-model="uploadedPictures" name="file" accept="image/*" ng-file-change="generateThumb(uploadedPictures[0], $files)" required="false">
                 <img ng-show="uploadedPictures[0].dataUrl != null" ng-src="{{uploadedPictures[0].dataUrl}}" class="thumb">
             </div>
             <div>
@@ -19,10 +19,10 @@
                 <label>Credits: </label>
                 <input type="text" name="credits" ng-model="pictureCredits" size="48" required="false" />
             </div>
-            <button type="button" ng-click="v2controller.submitPicture(uploadedPictures)">Submit</button>
+            <button type="button" ng-click="submitPicture(uploadedPictures)">Submit</button>
         </fieldset>
     </form>
-</div>
+<!-- </div> -->
 
 <!--
 http://ngmodules.org/modules/angular-file-upload
