--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
 </head>
 <body>
   <ul class="menu">
+    <li><a href="#/home">Home</a></li>
     <li><a href="#/view1">view1</a></li>
     <li><a href="#/view2">view2</a></li>
   </ul>
@@ -36,6 +37,7 @@
   <script src="/bower_components/ng-file-upload/angular-file-upload-shim.min.js"></script> 
   <script src="/bower_components/ng-file-upload/angular-file-upload.min.js"></script> 
   <script src="app.js"></script>
+  <script src="homeView/homeView.js"></script>
   <script src="view1/view1.js"></script>
   <script src="view2/view2.js"></script>
   <script src="components/version/version.js"></script>
