Work on home page + other minor fixes

--- a/app/index.html
+++ b/app/index.html
@@ -26,8 +26,9 @@
   <![endif]-->
 
   <div ng-view></div>
-
-  <div>Currently running v<span app-version></span></div>
+  <div class="footer">
+    <div>Currently running v<span app-version></span></div>
+  </div>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
