--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -1,4 +1,4 @@
-<!-- <div ng-controller="View2Ctrl as v2controller"> -->
+<div ng-controller="View2Ctrl">
     <form name="uploadPictureForm">
         <fieldset>
             <legend>Upload your own picture</legend>
