--- a/app/homeView/homeView.html
+++ b/app/homeView/homeView.html
@@ -4,9 +4,9 @@
         <div>{{companyName}}</div>
     </div>
     <div class="body">
-        <div ng-repeat="picture in uploadedPictures">
+        <a ng-repeat="picture in uploadedPictures" href="#/photos/{{picture.id}}">
             <div class="pictureTitle">{{picture.title}}</div>
             <img class="homePagePicture" ng-src="{{picture.dataURL}}">
-        </div>
+        </a>
     </div>
 </div>
