--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="view1/view1.css">
+<link rel="stylesheet" href="style/css/view1.css">
 <div class="view1" ng-controller="View1Ctrl as v1controller">
     <div class="largeImageContainer">
         <div class="imageWrapper">
