Rename View1 to PhotoDisplay___ and View2 to PhotoUpload___ + moved views to dedicated folder

--- a/app/index.html
+++ b/app/index.html
@@ -38,9 +38,9 @@
   <script src="/bower_components/ng-file-upload/angular-file-upload-shim.min.js"></script> 
   <script src="/bower_components/ng-file-upload/angular-file-upload.min.js"></script> 
   <script src="app.js"></script>
-  <script src="homeView/homeView.js"></script>
-  <script src="view1/view1.js"></script>
-  <script src="view2/view2.js"></script>
+  <script src="views/homeView/homeViewController.js"></script>
+  <script src="views/photoUpload/photoUploadController.js"></script>
+  <script src="views/photoDisplay/photoDisplayController.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
