Change nav bar link names

--- a/app/index.html
+++ b/app/index.html
@@ -17,8 +17,8 @@
 <body>
   <ul class="menu">
     <li><a href="#/home">Home</a></li>
-    <li><a href="#/photos/1">view1</a></li>
-    <li><a href="#/upload">view2</a></li>
+    <li><a href="#/photos/1">View Photo</a></li>
+    <li><a href="#/upload">Upload a new Photo</a></li>
   </ul>
 
   <!--[if lt IE 7]>
