Adding the service to transfer photo data between pages

--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,6 @@
 <body>
   <ul class="menu">
     <li><a href="#/home">Home</a></li>
-    <li><a href="#/photos/1">View Photo</a></li>
     <li><a href="#/upload">Upload a new Photo</a></li>
   </ul>
 
@@ -38,6 +37,7 @@
   <script src="/bower_components/ng-file-upload/angular-file-upload-shim.min.js"></script> 
   <script src="/bower_components/ng-file-upload/angular-file-upload.min.js"></script> 
   <script src="app.js"></script>
+  <script src="services/photoTransferService.js"></script>
   <script src="views/homeView/homeViewController.js"></script>
   <script src="views/photoUpload/photoUploadController.js"></script>
   <script src="views/photoDisplay/photoDisplayController.js"></script>
